# Fastapi-Watchtrace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.watchtower/: code_index.json
.watchtower/ceee7855/: memory.json  sunburst.html  trace.json
examples/: fastapi_server.py
examples/complex_server/: main.py
examples/complex_server/api/: routes.py
examples/complex_server/clients/: inventory_client.py  payment_client.py
examples/complex_server/core/: cache.py  config.py  decorators.py  logging_util.py
examples/complex_server/data/: seed_data.py
examples/ml_pipeline_server/: README.md  main.py  requirements.txt
examples/modules/: computation.py
examples/simple_server/: fastapi_server.py
frontend/watchtower-ui/: index.html  package-lock.json  package.json  vite.config.js
frontend/watchtrace-ui/: index.html  package-lock.json  package.json  vite.config.js
scripts/: build_index.py  build_request_artifacts.py  generate_sunburst.py  read_trace.py  show_user_flow.py  smoke_test_wheel.sh
src/watchtower/: __init__.py  api.py  filtering.py  frame_utils.py  graph_builder.py  middleware.py  models.py  pipeline.py  profiler.py  serializer.py  setup.py  sunburst.py  trace_parser.py  tree_builder.py
src/watchtrace/: __init__.py  api.py  artifacts.py  expansion.py  indexer.py  middleware.py  pipeline.py  profiler.py  setup.py  trace_parser.py
src/watchtrace/ui_dist/: index.html
tests/unit_test/: conftest.py  test_api.py  test_expansion.py  test_filtering.py  test_frame_utils.py  test_indexer.py  test_middleware.py  test_models.py  test_pipeline.py  test_profiler.py  test_serializer.py  test_setup.py  test_trace_parser.py  test_tree_and_graph.py
(+41 files in other folders)
