[project]
name = "fastapi-watchtower"
version = "1.0.0"
description = "Request tracing and visualization for FastAPI applications."
authors = [{name = "Hotson Honett", email = "hotsonhonet@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.135.3",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "twine>=6.2.0",
    "viztracer>=1.1.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
