[project]
name = "fastapi-watchtrace"
version = "0.0.2"
description = "Request tracing and visualization for FastAPI applications."
authors = [{name = "Hotson Honet", email = "hotsonhonet@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.136.1",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "viztracer>=1.1.1",
    "twine>=6.2.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
watchtrace = ["ui_dist/**/*"]